# MTOR-TEST

./: Dockerfile  README.md  api.py  inference.py  pyproject.toml
server/: app.py  group_chat.py
static/: index.html
tools/: knowledge_base_tool.py
utility/: llm_config.py
