[project]
name = "mtor-ai-support"
version = "0.1.0"
description = "MTOR Intelligent Script Driven Support"
authors = [
    {name = "MTOR Team"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pyautogen",
    "python-dotenv",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main" 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
